--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="author" description="Maded by qky">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=News+Cycle&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="main">
@@ -27,6 +28,6 @@
 	<script type="text/javascript" src=""></script>
 	<script type="text/javascript" src="js/vanilla-main.js">
 	</script>
-	<div class="copyright"><p>Copyright QkieMauln&copy;</p></div>
+	<div class="copyright"><p>Copyright QkieMauln&copy;<br/>Maded using Discord.js and VanillaJS</p></div>
 </body>
 </html>
